--- a/Container-Orchestration/wp-ms/wordpress-service.yaml
+++ b/Container-Orchestration/wp-ms/wordpress-service.yaml
@@ -3,7 +3,9 @@ kind: Service
 metadata:
   name: wordpress-service
   annotations:
-    service.beta.kubernetes.io/oci-load-balancer-shape: "100Mbps"
+    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
+    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
+    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "100"
   labels:
     app: wordpress
 spec:
